--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@remix-run/cloudflare-pages": "^1.17.1",
     "@remix-run/css-bundle": "^1.17.1",
     "@remix-run/react": "^1.17.1",
+    "@supabase/supabase-js": "^2.26.0",
     "cross-env": "^7.0.3",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
